Inlcuded new reference

--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 11 May 2021.
+%% Created using Papers on Tue, 25 May 2021.
 %% http://papersapp.com/papers/
 
 @article{Gaines:2018sg,
@@ -79,6 +79,14 @@ volume = {109},
 number = {1},
 pages = {33--57},
 month = nov
+}
+
+@techreport{Bahri:2021wz,
+author = {Bahri, T and Vasconcellos, M and Welch, D J and Johnson, J and Perri, R I and Ma, X and Sharma, R},
+title = {{Adaptive management of fisheries in response to climate change: FAO Fisheries and Aquaculture Technical Paper No. 667}},
+year = {2021},
+number = {667},
+address = {Rome, Italy}
 }
 
 @article{Dunne:2013db,
@@ -1245,6 +1253,7 @@ address = {Intergovernmental Panel on Climate Change}
 @article{Miller:2013iv,
 author = {Miller, Kathleen A and Munro, Gordon R and Sumaila, U Rashid and Cheung, William Wai Lung},
 title = {{Governing Marine Fisheries in a Changing Climate: A Game-Theoretic Perspective}},
+journal = {Canadian Journal of Agricultural Economics/Revue canadienne d'agroeconomie},
 year = {2013},
 volume = {61},
 number = {2},
@@ -1288,6 +1297,7 @@ month = may
 @article{Tai2017,
 author = {Tai, Travis C and Cashion, Tim and Lam, Vicky W Y and Sumaila, U Rashid},
 title = {{Ex-vessel fish price database: disaggregating prices for low-priced species from reduction fisheries}},
+journal = {Frontiers in Marine Science},
 year = {2017},
 volume = {4},
 number = {363},
