Updated methods to relfect sensitivity analysis of natural variabillity

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -97,19 +97,14 @@ where $lat_{eez}$ and $lat_{ts}$ are the latitudes of the EEZ and transboundary 
 TI =(\frac{D_{A,t}}{sd(D_{A,th})} - \frac{D_{B,t}}{sd(D_{B,th)}})^2
 \end{equation}
 
-where $D_A$ and $D_B$ represent the distance between the distribution centroids of a stock and the centroid of the neighboring EEZs (A and B) sharing the stock for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (th, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. 
+where $D_A$ and $D_B$ represent the distance between the distribution centroids of a stock and the centroid of the neighboring EEZs (A and B) sharing the stock for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (th, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. The TI was smoothed to a 10-year average to reduce interannual variability [@Frolicher:2016dg] and to match transboundary fisheries management that often integrates a longer time-frame in their consideration.
 
 <!-- Removed in response to reviewer 3 -->
 <!-- Thus, a higher TI means that the abundance of a transboundary stock within neighboring EEZs changes beyond historical levels. From the perspective of a state’s fisheries, increasing TI indicates an increase in the challenges to effective management and sustainability of the transboundary stock’s fisheries. In contrast, a decreasing TI suggests that the sharing of the stocks between neighboring EEZs is becoming relatively more stable; a condition that favors effective management and sustainability of the related fisheries. -->
 
-The index was smoothed to a 10-year average to reduce interannual variability [@Frolicher:2016dg].
-
 _**Calculating shifts in the shared distribution of transboundary stocks**_
 
-Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. **The TI’s natural internal variability was estimated from the ensemble members by firstly averaging the TI from 1951 to 2005 and then estimating the variation ($TI_\sigma$) across ensemble members.**
-
-
-The TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description):
+Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TI’s natural internal variability was estimated from the ensemble members by firstly averaging the TI from 1951 to 2005 and then estimating the variation ($TI_\sigma$) across ensemble members. The TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description):
 
 
 <!-- $EmergenceTIndex = \frac{\mu_{TI[t]}}{SD_{TI_{th}}}$ -->
@@ -122,9 +117,7 @@ ToE = TI_\mu[t']>2* TI_\sigma
 
 Thus, we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*t’*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution.
 
-**Since the ToE method is sensitive to the noise estimate (i.e., natural variability) [@Reference?], we conducted sensitivity analysis where we first calculated the standard deviation across the 10 ensemble members for each year between 1951 to 2005 and the calculating the average over 1950-2005 [@Reference?]. Results show that the alternative method estimates 1139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method), an it also estimates an overall latter ToE (2057 vs 2036 of the original method). The earlier and latter ToE remains the same, and the number of EEZs with emerging stocks slightly increases.**
-
-The ToE was also computed for a less conservative estimation using a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
+Since the ToE method is sensitive to the noise estimate (i.e., historical natural variability) [@Reference?], we conducted sensitivity analysis where we first calculated the average across the 10 ensemble members for each year between 1951 to 2005 and the calculating the standard deviation over 1950-2005 [@Reference?]. Under this method, the natural variability is slightly larger resulting in a latter overall time of emergence (average ToE = 2057 vs 2036 of the original method). However, this method projects 1,139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method). The minimum and maximum ToE remains the same, and the number of EEZs with emerging stocks slightly increases with the alternative method. Further research looking at different approaches of estimating the natural variability component could help reduce the uncertainty in the estimation of the time of emergence of transboundary stocks. The ToE was also computed for a less conservative estimation using a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
 
 
 _**Quantifying the intensity of transboundary stocks’ range shift**_
@@ -142,7 +135,7 @@ First, we estimated **the catch proportion as the** stock share ratio (SSR) catc
 
 _**Statistical analysis**_
 
-We tested the results for normality (e.g., skewness, kurtosis) and performed two non-parametric Kruskal–Wallis tests by ranks [@Hollander:2013wz]  to investigate geopolitical and ecological differences in the range shift of transboundary species. Specifically, we tested if the habitat preference of transboundary species and the geographic location of EEZs would have any effect on the transboundary stocks distributional range shift. In both cases, our null hypothesis was that there were no significant differences in the year of shift across habitat association or EEZs. All analyses were run using the statistical software R version 3.5.2 (2018-12-20; Eggshell Igloo) with the packages data.table [@Packagedatatable:2019uh], janitor [@PackagejanitorSim:2018ur], rfishbase [@PackagerfishbaseR:2019th], sf [@PackagesfSimpleF:2018vp], sp [@PackagespClasses:2019tn], tidiverse [@PackagetidyverseE:2017vq], tidytext [@PackagetidytextTe:2019vk], gmt [@PackagegmtInterfa:2017vh] and zoo [@PackagezooSInfr:2019tm], ggrepel [@PackageggrepelAut:2020to], zeallot [@PackagezeallotMul:2018wy], viridis [@PackageviridisDef:2018us], cowplot [@CowplotStreamlined:2019wt], moments [@PackagemomensMome:2015uh] and pgirmess [@PackagepgirmessSp:2018um]. Code for all analyses is available at https://github.com/jepa/TransEmergence
+We tested the results for normality (e.g., skewness, kurtosis) and performed two non-parametric Kruskal–Wallis tests by ranks [@Hollander:2013wz]  to investigate geopolitical and ecological differences in the range shift of transboundary species. Specifically, we tested if the habitat preference of transboundary species and the geographic location of EEZs would have any effect on the transboundary stocks distributional range shift. In both cases, our null hypothesis was that there were no significant differences in the year of shift across habitat association or EEZs. All analyses were run using the statistical software R version 3.5.2 (2018-12-20; Eggshell Igloo) with the packages cowplot [@CowplotStreamlined:2019wt], data.table [@Packagedatatable:2019uh], geosphere [@], ggrepel [@PackageggrepelAut:2020to], gmt [@PackagegmtInterfa:2017vh], janitor [@PackagejanitorSim:2018ur], moments [@PackagemomensMome:2015uh], pgirmess [@PackagepgirmessSp:2018um], rfishbase [@PackagerfishbaseR:2019th], sf [@PackagesfSimpleF:2018vp], sp [@PackagespClasses:2019tn], tidiverse [@PackagetidyverseE:2017vq], tidytext [@PackagetidytextTe:2019vk], viridis [@PackageviridisDef:2018us], zeallot [@PackagezeallotMul:2018wy], and zoo [@PackagezooSInfr:2019tm]. Code for all analyses is available at https://github.com/jepa/TransEmergence
 
 
 \clearpage
